# ApplicationTemplate

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  conanfile.txt
src/: application.cpp  application.h  eventhandler.cpp  eventhandler.h  gameloop.cpp  gameloop.h  main.cpp  window.cpp  window.h
